docker-compose/templates/ident-consumer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --chart --controller=deployment -f docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: ident-consumer
  name: ident-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ident-consumer
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --chart --controller=deployment -f docker-compose.yml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/vault: "true"
        io.kompose.service: ident-consumer
    spec:
      containers:
      - command:
        - ./ops/run_consumer.sh
        image: provide/ident:development
        imagePullPolicy: ""
        livenessProbe:
          exec:
            command:
            - curl
            - -f
            - http://ident:8080/status
          failureThreshold: 2
          initialDelaySeconds: 10
          periodSeconds: 60
          timeoutSeconds: 1
        name: ident-consumer
        resources: {}
      hostname: ident-consumer
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
