docker-compose/templates/ident-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --chart --controller=deployment -f docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: ident
  name: ident
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ident
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --chart --controller=deployment -f docker-compose.yml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/vault: "true"
        io.kompose.service: ident
    spec:
      containers:
      - env:
        - name: DATABASE_HOST
          value: postgres
        - name: DATABASE_NAME
          value: ident_dev
        - name: DATABASE_PASSWORD
          value: ident
        - name: DATABASE_SUPERUSER
          value: prvd
        - name: DATABASE_SUPERUSER_PASSWORD
          value: prvdp455
        - name: DATABASE_USER
          value: ident
        - name: LOG_LEVEL
          value: DEBUG
        - name: NATS_CLIENT_PREFIX
          value: ident
        - name: NATS_STREAMING_URL
          value: nats://nats-streaming:4222
        - name: NATS_URL
          value: nats://nats:4222
        - name: PORT
          value: "8080"
        - name: REDIS_HOSTS
          value: redis:6379
        image: provide/ident:development
        imagePullPolicy: ""
        livenessProbe:
          exec:
            command:
            - curl
            - -f
            - http://ident:8080/status
          failureThreshold: 2
          initialDelaySeconds: 10
          periodSeconds: 60
          timeoutSeconds: 1
        name: ident
        ports:
        - containerPort: 8080
        resources: {}
      hostname: ident
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
