docker-compose/templates/nats-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --chart --controller=deployment -f docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: nats
  name: nats
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nats
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --chart --controller=deployment -f docker-compose.yml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/vault: "true"
        io.kompose.service: nats
    spec:
      containers:
      - args:
        - -auth
        - testtoken
        - -p
        - "4222"
        - -D
        - -V
        image: provide/nats-server
        imagePullPolicy: ""
        livenessProbe:
          exec:
            command:
            - /usr/local/bin/await_tcp.sh
            - localhost:4222
          failureThreshold: 2
          initialDelaySeconds: 10
          periodSeconds: 60
          timeoutSeconds: 1
        name: provide-nats
        ports:
        - containerPort: 4221
        - containerPort: 4222
        resources: {}
        volumeMounts:
        - mountPath: /usr/local/bin/await_tcp.sh
          name: nats-claim0
      hostname: nats
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: nats-claim0
        persistentVolumeClaim:
          claimName: nats-claim0
status: {}
