docker-compose/templates/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --chart --controller=deployment -f docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: redis
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redis
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --chart --controller=deployment -f docker-compose.yml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/vault: "true"
        io.kompose.service: redis
    spec:
      containers:
      - image: redis
        imagePullPolicy: ""
        livenessProbe:
          exec:
            command:
            - redis-cli
            - ping
          failureThreshold: 2
          initialDelaySeconds: 10
          periodSeconds: 60
          timeoutSeconds: 1
        name: redis
        ports:
        - containerPort: 6379
        resources: {}
      hostname: redis
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
