docker-compose/templates/vault-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --chart --controller=deployment -f docker-compose.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: vault
  name: vault
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: vault
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --chart --controller=deployment -f docker-compose.yml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/vault: "true"
        io.kompose.service: vault
    spec:
      containers:
      - env:
        - name: DATABASE_HOST
          value: postgres
        - name: DATABASE_NAME
          value: vault_dev
        - name: DATABASE_PASSWORD
          value: vault
        - name: DATABASE_SUPERUSER
          value: prvd
        - name: DATABASE_SUPERUSER_PASSWORD
          value: prvdp455
        - name: DATABASE_USER
          value: vault
        - name: LOG_LEVEL
          value: DEBUG
        - name: PORT
          value: "8080"
        - name: SEAL_UNSEAL_VALIDATION_HASH
          value: 0x7cff64a2d2b709dd9df196000be6237875bafe0a92873fd9fd9f35c00808f309
        image: provide/vault:development
        imagePullPolicy: ""
        livenessProbe:
          exec:
            command:
            - curl
            - -f
            - http://vault:8080/status
          failureThreshold: 2
          initialDelaySeconds: 10
          periodSeconds: 60
          timeoutSeconds: 1
        name: vault
        ports:
        - containerPort: 8080
        resources: {}
      hostname: vault
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
