docker-compose/templates/ident-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    service: ident
  name: ident
spec:
  type: NodePort
  ports:
  - name: "8081"
    port: 8080
    nodePort: 30081
  selector:
    io.kompose.service: ident
status:
  loadBalancer: {}
