docker-compose/templates/vault-custom-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaulteoin
spec:
  ports:
    port: 80
    protocol: TCP
    targetPort: 8080
    selector:
      app: vaulteoin
    type: LoadBalancer
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaulteoin
  labels:
    app: vault_v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vaulteoin
  template:
    metadata:
      labels:
        app: vaulteoin
    spec:
      containers:
      - env:
        - name: DATABASE_HOST
          value: postgres
        - name: DATABASE_NAME
          value: vault_dev
        - name: DATABASE_PASSWORD
          value: vault
        - name: DATABASE_SUPERUSER
          value: prvd
        - name: DATABASE_SUPERUSER_PASSWORD
          value: prvdp455
        - name: DATABASE_USER
          value: vault
        - name: LOG_LEVEL
          value: DEBUG
        - name: PORT
          value: "8080"
        - name: SEAL_UNSEAL_VALIDATION_HASH
          value: 0x7cff64a2d2b709dd9df196000be6237875bafe0a92873fd9fd9f35c00808f309    
        name: vaulteoin
        image: provide/vault:development
        ports:
          - containerPort: 8080
