docker-compose/templates/vault-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: vault
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/vault: "true"
  podSelector:
    matchLabels:
      io.kompose.network/vault: "true"
